--- a/app/src/main/res/layout/fragment_customer__call__request.xml
+++ b/app/src/main/res/layout/fragment_customer__call__request.xml
@@ -11,74 +11,79 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Support"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/subtitleText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Choose your preferred way to connect with us."
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="@string/contact_support"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/voiceCallButtonLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/subtitleText">
-
-        <!-- Voice Call Button -->
-        <ImageButton
-            android:id="@+id/voiceCallButton"
-            android:layout_width="10dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/video_call_selector"
-            android:contentDescription="@string/voice_call"
-            android:src="@drawable/nav_call" />
-
-        <View
-            android:layout_width="16dp"
-        android:layout_height="1dp"
-        />
-
-        <!-- Video Call Button -->
-        <ImageButton
-            android:id="@+id/videoCallButton"
+        <TextView
+            android:id="@+id/subtitleText"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/video_call_selector"
-            android:contentDescription="@string/video_call"
-            android:src="@drawable/nav_videocall" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/_1_choose_your_preferred_way_to_connect_with_us"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+        <LinearLayout
+            android:id="@+id/voiceCallButtonLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/subtitleText">
+
+            <!-- Voice Call Button -->
+            <ImageButton
+                android:id="@+id/voiceCallButton"
+                android:layout_width="10dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/video_call_selector"
+                android:contentDescription="@string/voice_call"
+                android:src="@drawable/nav_call"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <View
+                android:layout_width="16dp"
+                android:layout_height="1dp" />
+
+            <!-- Video Call Button -->
+            <ImageButton
+                android:id="@+id/videoCallButton"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/video_call_selector"
+                android:contentDescription="@string/video_call"
+                android:src="@drawable/nav_videocall"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/callTypeerrorText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Please select a call type"
+            android:text="@string/please_select_a_call_type"
             android:textColor="@color/red"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,34 +91,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/voiceCallButtonLayout" />
 
-    <TextView
-        android:id="@+id/department_text_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Choose the department you would like to contact"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/callTypeerrorText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/department_text_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/_2_choose_the_department_you_would_like_to_contact"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/callTypeerrorText" />
 
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/departmentSpinner"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/department_text_title"
-        android:hint="Department">
-
-        <AutoCompleteTextView
-            android:id="@+id/departmentSpinnerText"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/departmentSpinner"
+            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none" />
+            android:layout_marginTop="8dp"
+            android:hint="@string/department"
+            app:layout_constraintTop_toBottomOf="@id/department_text_title">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <AutoCompleteTextView
+                android:id="@+id/departmentSpinnerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
 
@@ -122,7 +130,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Please select your department"
+        android:text="@string/please_select_your_department"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:visibility="invisible"
@@ -131,42 +139,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/departmentSpinner" />
 
-    <TextView
-        android:id="@+id/descriptionText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="Describe your issue"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/departmenterrorText" />
+        <TextView
+            android:id="@+id/descriptionText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/_3_describe_your_issue"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/departmenterrorText" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/call_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:hint="Describe your issue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/descriptionText">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/call_description_edittext"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/call_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:hint="@string/describe_your_issue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descriptionText">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/call_description_edittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/descriptionerrorText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Please describe your issue"
+        android:text="@string/please_describe_your_issue"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:visibility="invisible"
@@ -177,14 +187,27 @@
 
         <Button
             android:id="@+id/connectButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
-            android:text="Connect Now"
+            android:layout_marginTop="8dp"
+            android:text="@string/connect_now"
+            app:icon="@drawable/nav_call"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/descriptionerrorText" />
+
+        <TextView
+            android:id="@+id/textView20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/gothic_a1_semibold"
+            android:text="@string/please_fill_up_the_form_to_connect_now"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/contentTextColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
