--- a/app/src/main/res/layout/fragment_employee__c_c__home.xml
+++ b/app/src/main/res/layout/fragment_employee__c_c__home.xml
@@ -89,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Requests"
+                        android:text="@string/requests_"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -99,7 +99,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Get back to your requests"
+                        android:text="@string/get_back_to_your_requests_"
                         android:textColor="@color/white"
                         android:textSize="10sp"
                         android:textStyle="bold" />
